# promptbranch

./: .dockerignore  .gitignore  .not_to_zip  0  69fd0f07-8a28-8395-8f3d-cb6d758965d7.1.task.show  69fd0f07-8a28-8395-8f3d-cb6d758965d7.2.task.show  Dockerfile  PATCHRIGHT_UPGRADE_NOTES.md  PATCH_REPORT.txt  Promptbranch-as-Claude-Code-Shell-Operating-Model.updated-2026-05-03.txt  README.md  SANITIZATION_REPORT.txt  UPGRADING.md  VERSION  alembic.ini  build.sh  build_chatgpt_service.sh  chatgpt_browser_route_test.py  chatgpt_claudecode_workflow_release_control.sh  chatgpt_cli.py  chatgpt_cli_sequence_v5.py  chatgpt_container_api.py  chatgpt_full_integration_test.py  chatgpt_full_integration_test.py.38.1.logldf  chatgpt_full_integration_test.py.39.logldf  chatgpt_login_test.py  chatgpt_service_client.py  chatgpt_state.py  commands.txt  config.py  database.py  debug_chatgpt_projects_popup.py  debug_chatgpt_projects_popup_v2.py  docker-compose.chatgpt-service.yml  dockerignore  env.example  exec_pod.sh  ff  generate_migration.sh  gitignore  (+66 more)
chatgpt_automation/: __init__.py  automation.py  service.py
chatgpt_browser_auth/: __init__.py  client.py  config.py  exceptions.py
chatgpt_cli_patch_bundle/: README.md  chatgpt_cli_sequence_v5.py  expected_contract.json  patch_plan.md
chatgpt_workflow/: __init__.py  automation.py  cli.py  client.py  state.py
chatgpt_workflow.obsolete/completions/: README.txt  chatgpt.bash
debug_projects_popup_20260420-145351/: launch-error-chrome.txt  launch-error-chromium.txt
debug_projects_popup_20260420-145501/: launch-error-chrome.txt  launch-error-chromium.txt
debug_projects_popup_20260420-145711/: launch-error-chrome.txt  launch-error-chromium.txt  launch-error-msedge.txt
docker/: run-chatgpt-service-in-container.sh
docs/: promptbranch_ask_reply_protocol_design_and_mvp_plan.md  repair-v0.0.198.1.md  repair-v0.0.198.2.md  repair-v0.0.201.1.md  repair-v0.0.203.1.md  repair-v0.0.222.1.md
docs/howto/: README.md  (+15 more)
examples/: chatgpt_service_client_example.py  promptbranch_service_client_example.py
migrations/: env.py
promptbranch/: __init__.py  artifacts.py  automation.py  cli.py  client.py  mcp.py  shell_model.py  state.py
promptbranch_automation/: __init__.py  automation.py  service.py
promptbranch_browser_auth/: __init__.py  client.py  config.py  exceptions.py
promptbranch_protocol/: __init__.py
scripts/: post-release-validation.sh  promptbranch-aliases.sh  promptbranch-statusline.sh  setup-promptbranch-shell.sh
tests/: PRODUCTION_TESTING.md  conftest.py  t_2fa.py  test_api.py  test_automation_password_resolution.py  test_chatgpt_cli.py  test_chatgpt_cli_sequence_v5.py  test_chatgpt_container_api.py  test_chatgpt_service_client.py  test_cli_parser.py  test_cli_state.py  test_full_integration_harness.py  test_project_list_browser_client.py  test_project_resolve.py  test_project_source_capabilities.py  test_promptbranch_artifacts.py  test_promptbranch_ask_protocol.py  test_promptbranch_automation_service.py  test_promptbranch_cli.py  test_promptbranch_cli_sequence_v5.py  test_promptbranch_container_api.py  test_promptbranch_internal_rebrand.py  test_promptbranch_mcp.py  test_promptbranch_service_client.py  test_promptbranch_shell_model.py  test_promptbranch_shell_scripts.py  test_promptbranch_test_report.py  test_promptbranch_test_suite.py  test_response_completion.py
(+23 files in other folders)
