[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptbranch"
version = "0.0.212"
description = "Stateful ChatGPT workflow CLI and reusable browser-automation service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "httpx",
  "patchright",
  "playwright",
  "pydantic",
  "python-dotenv",
  "python-multipart",
  "uvicorn",
  "watchfiles",
]

[tool.setuptools]
py-modules = ["promptbranch_cli", "promptbranch_container_api", "promptbranch_service_client", "promptbranch_state", "promptbranch_shell_model", "promptbranch_artifacts", "promptbranch_mcp", "promptbranch_ask_protocol", "promptbranch_full_integration_test", "promptbranch_login_test", "promptbranch_cli_sequence_v5", "promptbranch_test_suite", "promptbranch_test_report", "promptbranch_version"]

[tool.setuptools.packages.find]
include = ["promptbranch*", "promptbranch_automation*", "promptbranch_browser_auth*"]

[project.scripts]
promptbranch = "promptbranch.cli:main"
pb = "promptbranch.cli:main"
promptbranch-ui = "promptbranch_container_api:main"

[tool.setuptools.package-data]
promptbranch = ["completions/*"]
promptbranch_protocol = ["schemas/*.json", "examples/*.json", "prompts/*.md"]
